# voice-command-publisher

./: README.md  udp_offboard_receiver.cpp  udp_offboard_receiver_ver1.cpp  udp_receiver.cpp  udp_ros_bridge.cpp  voice_offboard_node.cpp
drone_gripper/: CMakeLists.txt  package.xml
drone_gripper/src/: actuator_control.cpp  control  voice_actuator_control.cpp
drone_voice_control/: package.xml  setup.cfg  setup.py
drone_voice_control/drone_voice_control/: voice_control_node.py
test_arm/: package.xml  setup.cfg  setup.py
test_arm/test_arm/: test_arm_node.py
udp sender/: README.md  pi_client.py  voice_control.cpp  voice_control.py
udp_mavros_bridge/: CMakeLists.txt  package.xml
udp_mavros_bridge/config/: px4_config.yaml  px4_pluginlists.yaml
udp_mavros_bridge/launch/: udp_mavros_bridge.launch.py
udp_mavros_bridge/src/: mavros_example.cpp  udp_mavros_bridge.cpp  udp_mavros_bridge_2.cpp
voice_control_cpp/: CMakeLists.txt  package.xml
voice_control_cpp/src/: faster-whisper-voice-offboard.sh  faster_offboard_node.cpp  laptop_server.py  pi_client.py  run-whisper-voice-offboard.sh  voice_control_node.cpp  voice_offboard_node.cpp  whisper_offboard_node.cpp
